--- a/apex_hands_on/.vscode/settings.json
+++ b/apex_hands_on/.vscode/settings.json
@@ -4,5 +4,6 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "salesforce.einsteinForDevelopers.enable": false
+  "salesforce.einsteinForDevelopers.enable": false,
+  "salesforcedx-vscode-core.retrieve-test-code-coverage": true
 }
